<resources>
    <string name="app_name">BINARCHPLATINUM</string>
    <string name="text_add_new_expense">Add new expense</string>
    <string name="fill_in_required_info">fill in required info</string>
    <string name="text_date">Date</string>
    <string name="text_category">Category</string>
    <string name="text_name">Name</string>
    <string name="text_expense">Expense</string>
    <string name="text_submit">Submit</string>
    <string name="loading">Loading</string>

    <!-- || SPLASHSCREEN ACTIVITY || -->
    <string name="text_expenditura_logo">Expenditura Logo</string>
    <string name="text_splash_desc_1">Better track your expenses with an ease of a click</string>
    <string name="text_splash_desc_2">Better money management equals better life</string>

    <!-- || LOGIN ACTIVITY || -->
    <string name="login_text">Login</string>
    <string name="edit_text_username">Username</string>
    <string name="edit_text_password">Password</string>
    <string name="button_sign_in">Login</string>
    <string name="button_sign_up">Don`t have an account? Sign up!</string>
    <string name="text_title_input_name">Log in </string>
    <string name="text_hint_name">User Name</string>
    <string name="button_login">Login </string>

    <!-- || SIGNUP ACTIVITY || -->
    <string name="sign_up">Sign up</string>
    <string name="edit_text_password_confirm">Confirm password</string>
    <string name="button_sign_up_activity">Sign up</string>
    <string name="password_error_no_password">Please enter password</string>
    <string name="password_error_short_password">Password should contain more than 5 letters</string>
    <string name="password_error_password_not_confirmed">Wrong password! Please type again</string>
    <string name="username_error_no_username">Please enter username</string>
    <string name="username_error_long_username">Username is too long</string>
    <string name="login_error_incorrect_input">Username or login is incorrect. Try again or sign up!</string>

    <!-- || HOME ACTIVITY || -->
    <string name="home_activity_text_btn_add_expense">Add New Expense</string>
    <string name="home_activity_text_greeting_topbar">Hello,</string>
    <string name="logout_text">Are you sure you want to log out ?</string>
    <string name="lbl_yes">Yes</string>
    <string name="lbl_no">No</string>
    <!-- NAME OF FILTER LIST -->
    <string name="filter_all_expense">All Transaction</string>
    <string name="filter_category">By Category</string>
    <!-- STRING FOR CHART -->
    <string name="total_expenses">Total Expenses</string>
    <string name="biggest_nexpense">Biggest\nexpense:</string>
    <string name="success_delete_toast">Successfully delete expense!</string>
    <string name="error_delete_toast">Unable to delete data</string>
    <string name="no_data">No Data</string>

    <!-- || CATEGORIES || -->
    <string-array name="categories">
        <item>Shopping</item>
        <item>Sport</item>
        <item>Food &amp; drink</item>
        <item>Transportation</item>
        <item>Groceries</item>
        <item>Home Bills</item>
        <item>Entertainment</item>
    </string-array>
</resources>