<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/super_dark_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/piechart"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_gravity="start"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_font"
                    android:gravity="end"
                    android:text="@string/total_expenses"
                    android:textColor="@color/light_purple"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_total_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_font"
                    android:gravity="end"
                    android:textColor="@color/light_grey"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="1.200.000" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/light_purple" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="2dp"
                        android:fontFamily="@font/inter_font"
                        android:gravity="center"
                        android:maxLines="2"
                        android:text="@string/biggest_nexpense"
                        android:textColor="@color/light_purple"
                        android:textSize="10sp" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="6dp"
                        android:layout_marginStart="6dp"
                        android:orientation="horizontal"
                        app:cardBackgroundColor="@color/dark_purple"
                        app:cardCornerRadius="4dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal"
                            tools:ignore="UseCompoundDrawables">

                            <ImageView
                                android:id="@+id/iv_highest"
                                android:layout_width="16dp"
                                android:layout_height="16dp"
                                android:layout_margin="6dp"
                                android:src="@drawable/ic_groceries"
                                tools:ignore="ContentDescription" />

                            <TextView
                                android:id="@+id/tv_highest"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="6dp"
                                android:fontFamily="@font/inter_font"
                                android:textColor="@color/light_purple"
                                android:textSize="10sp"
                                tools:text="@string/no_data" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>